tests/ui/frontmatter/unclosed-5.stderr
error: unclosed frontmatter
  --> $DIR/unclosed-5.rs:1:1
   |
LL | / ----cargo
...  |
LL | |
   | |_^
   |
note: frontmatter opening here was not closed
  --> $DIR/unclosed-5.rs:1:1
   |
LL | ----cargo
   | ^^^^

error: aborting due to 1 previous error

